--- a/TASK_4/views/index.hbs
+++ b/TASK_4/views/index.hbs
@@ -17,7 +17,7 @@
     >
       <form class="container-fluid justify-content-start">
         <button type="button" class="btn btn-success me-2">Add Type</button>
-        <button type="button" class="btn btn-success">Add Hero</button>
+        <a href="/add-heroes" type="button" class="btn btn-success">Add Hero</a>
       </form>
     </nav>
     <div
@@ -35,7 +35,7 @@
           style="width: 18rem; justify-content: flex-start; padding-left: 20px"
         >
           <img
-            src="../image/meliodas-nanatsu-no-taizai-7akau6i10022ljmy.jpg"
+            src="../uploadImage/{{this.image}}"
             class="card-img-top"
             alt="wew"
           />
